--- a/index.html
+++ b/index.html
@@ -192,6 +192,32 @@
 
   <section class="contact">
     <h2>Ready to Grow Your Business?</h2>
+    <a href="https://www.digijadu.com/how-to-see-who-unfollowed-you-on-instagram/">how to see who unfollowed you on instagram</a>
+
+    <a href="https://www.digijadu.com/highlight-duplicates-in-excel/">highlight duplicates in excel</a>
+
+    <a href="https://www.digijadu.com/how-to-see-who-viewed-your-snapchat/">how to see who viewed your snapchat</a>
+
+    <a href="https://www.digijadu.com/how-to-sign-out-of-google-account/">how to sign out of google account</a>
+
+    <a href="https://www.digijadu.com/how-to-see-who-viewed-your-instagram/">how to see who viewed your instagram</a>
+
+    <a href="https://www.digijadu.com/how-to-hide-likes-on-instagram/">how to hide likes on instagram</a>
+
+    <a href="https://www.digijadu.com/how-to-highlight-duplicates-in-excel/">how to highlight duplicates in excel</a>
+
+    <a href="https://www.digijadu.com/what-does-sos-mean-on-iphone/">what does sos mean on iphone</a>
+
+    <a href="https://www.digijadu.com/how-to-view-archived-emails-in-gmail/">how to view archived emails in gmail</a>
+
+    <a href="https://www.digijadu.com/how-to-delete-gmail-account/">how to delete gmail account</a>
+
+    <a href="https://www.digijadu.com/how-to-mass-delete-emails-on-gmail/">how to mass delete emails on gmail</a>
+
+    <a href="https://www.digijadu.com/how-long-can-instagram-reels-be/">how long can instagram reels be</a>
+
+    <a href="https://www.digijadu.com/how-many-followers-to-go-live-on-tiktok/">how many followers to go live on tiktok</a>
+
     <a href="#" class="btn">Contact Us Now</a>
   </section>
 
