--- a/index.html
+++ b/index.html
@@ -195,12 +195,11 @@
     <h2>Ready to Grow Your Business?</h2>
     
 <a href="https://vocal.media/authors/nicolas-warn">Content Writer Profile</a>
-<a href="https://www.cucei.udg.mx/maestrias/biotecnologia/sites/default/files/webform/0069.pdf">Contact Us PDF Form</a>
-<a href="https://www.cucei.udg.mx/maestrias/biotecnologia/sites/default/files/webform/0064.pdf">Contact Us PDF Form</a>
-<a href="https://www.cucei.udg.mx/maestrias/biotecnologia/sites/default/files/webform/0065.pdf">Contact Us PDF Form</a>
-<a href="https://www.cucei.udg.mx/maestrias/biotecnologia/sites/default/files/webform/0066.pdf">Contact Us PDF Form</a>
-<a href="https://www.cucei.udg.mx/maestrias/biotecnologia/sites/default/files/webform/0067.pdf">Contact Us PDF Form</a>
-<a href="https://www.cucei.udg.mx/maestrias/biotecnologia/sites/default/files/webform/what_does_the_yellow_heart_mean_on_snapchat_.pdf">Contact Us PDF Form</a>
+<a href="https://oig.dc.gov/sites/default/files/webform/medicaid_fraud_complaint_form/_sid_/0064.pdf">All Streaming Customer Support Number</a>
+<a href="https://oig.dc.gov/sites/default/files/webform/medicaid_fraud_complaint_form/_sid_/0065.pdf">All Streaming Customer Support Number</a>
+<a href="https://oig.dc.gov/sites/default/files/webform/medicaid_fraud_complaint_form/_sid_/0066.pdf">All Streaming Customer Support Number</a>
+<a href="https://oig.dc.gov/sites/default/files/webform/rafp_online_complaint_form/_sid_/0067.pdf">All Streaming Customer Support Number</a>
+<a href="https://oig.dc.gov/sites/default/files/webform/rafp_online_complaint_form/_sid_/0069.pdf">All Streaming Customer Support Number</a>
 
 <br>
 
